[arch][niri] Request Wayland for Electorn and SDL applications; Float KeepassXC window; Route media controls directly to spotify; Tidy up keybinds; Fix waybar spacing

--- a/arch/waybar/style.css
+++ b/arch/waybar/style.css
@@ -13,7 +13,9 @@ window#waybar {
     padding: 0 2px 2px 2px;
 }
 
-label {
+label,
+#tray,
+#window {
     padding: 0 10px;
     color: #ffffff;
     border-radius: 5px;
@@ -47,6 +49,12 @@ label {
 #pulseaudio.muted {
     background-color: #90b1b1;
     color: #2a5c45;
+}
+
+#custom-power {
+    /* background-color: #2a5c45; */
+    background-color: #303030;
+    padding: 0 12px;
 }
 
 /* Tray */
